Show legacy devices in separate list and separate API